--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,8 +8,9 @@
     ],
     "routes": [
       {
-        "src": "/(.*)",
+        "src": "/dist/(.*)",
         "dest": "/"
       }
     ]
   }
+  
