--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "tsc-watch --onSuccess \" npm run start \"",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "nodemon dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,9 +14,13 @@
   "dependencies": {
     "@prisma/client": "^6.0.1",
     "@types/node": "^22.10.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
+    "nodemon": "^3.1.9",
     "prisma": "^6.0.1",
     "tsc-watch": "^6.2.1",
     "tsx": "^4.19.2",
