--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^6.0.1",
     "@types/node": "^22.10.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.0",
@@ -28,6 +29,7 @@
     "vercel": "^39.2.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0"
+    "@types/express": "^5.0.0",
+    "@types/node-fetch": "^2.6.12"
   }
 }
