--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "axios": "^1.7.9",
     "jwt-decode": "^4.0.0"
   }
 }
