--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@monaco-editor/react": "^4.6.0",
     "@react-oauth/google": "^0.12.1",
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
