--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.1",
     "@monaco-editor/react": "^4.6.0",
     "@react-oauth/google": "^0.12.1",
     "bootstrap": "^5.3.3",
+    "cloudinary": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "monaco-editor": "^0.52.2",
     "react": "^18.3.1",
@@ -29,6 +34,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "axios": "^1.7.9",
     "eslint": "^9.15.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
