--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@monaco-editor/react": "^4.6.0",
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "bootstrap": "^5.3.3",
     "cloudinary": "^2.5.1",
     "jwt-decode": "^4.0.0",
@@ -25,8 +26,11 @@
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
+    "styled-components": "^6.1.14",
     "yup": "^1.6.1"
   },
   "devDependencies": {
