--- a/client/package.json
+++ b/client/package.json
@@ -16,14 +16,22 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.1",
     "@monaco-editor/react": "^4.6.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.5.0",
+    "@shadcn/ui": "^0.0.4",
     "bootstrap": "^5.3.3",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
+    "clsx": "^2.1.1",
+    "firebase": "^11.2.0",
+    "framer-motion": "^12.0.6",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.474.0",
     "monaco-editor": "^0.52.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
+    "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
@@ -32,6 +40,7 @@
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.2",
     "styled-components": "^6.1.14",
+    "tailwind-variants": "^0.3.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -39,11 +48,14 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "eslint": "^9.15.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
