added verification api to authenticate use via OTP and changed background image of signup,login and Home page

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,8 @@
 ServerUrl = "http://localhost:8000"
 # ServerUrl="https://codegalaxy-server.onrender.com"
 PORT=8000
+EMAIL="gehlotnikhil38@gmail.com"
+CLIENT_ID="1046247015186-41mof8d82k7ko84fpns9nqlbjsi6m1ob.apps.googleusercontent.com"
+CLIENT_SECRET="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"
+REFRESH_TOKEN="1//041INQFR37CaVCgYIARAAGAQSNwF-L9IrBQ4xtvZ7tWOZoiHpxyqJsfbW7z1oxckts-fXw-CEVFpV8xRTlFFfQi66sRmERLZs8tU"
+
