--- a/server/package.json
+++ b/server/package.json
@@ -15,15 +15,20 @@
     "@faker-js/faker": "^9.3.0",
     "@prisma/client": "^6.2.1",
     "@types/node": "^22.10.1",
+    "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "emailjs-com": "^3.2.0",
     "express": "^4.21.2",
     "express-validator": "^7.2.0",
+    "googleapis": "^144.0.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "resend": "^4.1.1",
     "tsc-watch": "^6.2.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
