--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.22.10",
     "@faker-js/faker": "^9.3.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
@@ -28,9 +29,10 @@
     "framer-motion": "^12.0.6",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
+    "mdi-react": "^9.4.0",
     "monaco-editor": "^0.52.2",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.7",
+    "react-bootstrap": "^2.10.9",
     "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
