--- a/cron-job/package.json
+++ b/cron-job/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsc-watch --onSuccess \" npm run start \"",
+    "start": "nodemon ./dist/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
     "prisma": "^6.3.1",
     "tsc-watch": "^6.2.1",
