--- a/cron-job/package.json
+++ b/cron-job/package.json
@@ -4,21 +4,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc",
     "dev": "tsc-watch --onSuccess \" npm run start \"",
-    "start": "nodemon ./dist/index.js"
+    "start": "nodemon dist/index.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.3.1",
-    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.13.1",
-    "axios": "^1.7.9",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
     "prisma": "^6.3.1",
