--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "codegalaxy",
   "version": "1.0.0",
@@ -6,8 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "install-all": "npm i && npm run client-install && npm run server-install ",
-    "client-install":"cd client && npm i",
-    "server-install":"cd server && npm i",
+    "client-install": "cd client && npm i",
+    "server-install": "cd server && npm i",
     "client": "cd client && npm run dev ",
     "server": "cd server && npm run dev ",
     "both": "concurrently \" npm run client \" \" npm run server \" "
@@ -17,11 +16,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.3.1",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
     "concurrently": "^9.1.2",
+    "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "jwt-decode": "^4.0.0",
+    "prisma": "^6.3.1",
     "react-router-dom": "^7.1.1",
     "vercel": "^39.2.5"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0"
   }
 }
