--- a/cron-job/package.json
+++ b/cron-job/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
     "dev": "tsc-watch --onSuccess \" npm run start \"",
-    "start": "nodemon dist/index.js"
+    "start": "nodemon public/index.js",
+    "start-n": "node public/index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.9",
     "prisma": "^6.3.1",
     "tsc-watch": "^6.2.1",
