--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,11 @@ server/node_modules
 .vscode
 *.env
 *.env.local
-
+client/.env
 client/.env.local
 server/.env
+ws2/.env
+ws2/.env.local
 server/prisma/.env
 server2/node_modules
 cron-job/node_modules
