--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:20-alpine
 
-WORKDIR /app/client
+WORKDIR /app
 
 COPY ./package.json ./package.json
 
@@ -10,7 +10,7 @@ COPY . .
 
 RUN npm run build
 
-CMD ["npm","run","preview"]
+CMD ["npm","run","build"]
 
 
 
