--- a/ws2/Dockerfile
+++ b/ws2/Dockerfile
@@ -1,15 +1,14 @@
-FROM node:20-alpine
+FROM node:18-alpine
 
 WORKDIR /app
 
-COPY ./package.json ./package.json
+COPY package.json package.json
 
 RUN npm install
 
 COPY . .
 
-RUN npx prisma generate
-
 RUN npm run build
+
 
 CMD ["npm","run","start"]
