--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
     "build": "tsc",
     "dev": "tsc-watch --onSuccess \" npm run start \"",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "prisma generate"
+
   },
   "author": "",
   "license": "ISC",
