--- a/k8s/backend-service.yml
+++ b/k8s/backend-service.yml
@@ -9,5 +9,6 @@ spec:
   ports:
   - protocol: TCP
     port: 8000
-    targetPort: 
-  type: ClusterIP
+    targetPort: 8000
+    nodePort: 30081
+  type: NodePort
