--- a/k8s/frontend-deployment.yml
+++ b/k8s/frontend-deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: code-frontend
-        image: gehlotnikhil38/codegalaxy-frontend:latest
+        image: gehlotnikhil38/code_frontend:v3
         ports:
         - containerPort: 80
         resources: 
