--- a/k8s/ws2-service.yml
+++ b/k8s/ws2-service.yml
@@ -9,5 +9,6 @@ spec:
   ports:
   - protocol: TCP
     port: 8081
-    targetPort: 
-  type: ClusterIP
+    targetPort: 8081
+    nodePort: 30082
+  type: NodePort
